--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,21 +12,59 @@
 
 <div class="container" >
 	<div class="row">
-		<h3>Articles</h3>
-		<div class="col-sm-6">
-			<img src='/assets/placeholder.jpg' alt="Main article image" height= "auto" width= "585" class="article-image-main">
+		<h3 class="h3-title">Articles</h3>
+		<div class="col-md-6">
+			<img src='/assets/placeholder.jpg' alt="Main article image" class="article-image-main">
+			
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
+			
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
+		
+		</div>
+		<div class="col-sm-3">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
+		</div>
+		<div class="col-sm-2">
+			
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
+		</div>
+		<div class="col-sm-2">
 			
 		</div>
-		<div class="col-sm-2">
-			<img src='/assets/placeholder.jpg' alt="secondary article image" height= "auto" width= "165" class="article-image-second">
+			
+		
+	</div>
+	<div class="row">
+		<div class="col-sm-2-1">
+		<h3 class="h3-title">People</h3>
+		</div>
+		<div class="col-md-6">
+			<img src='/assets/placeholder.jpg' alt="Main article image" class="article-image-main">
+			
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
+			
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
+		
+		</div>
+		<div class="col-sm-3">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
 		</div>
 		<div class="col-sm-2">
 			
-			<p class="a-pic">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-			<p class="a-pic">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
 		</div>
 		<div class="col-sm-2">
-			<p class="a">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+			
 		</div>
 			
 		
