--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -4,7 +4,18 @@
 
 
 .container{
-	width: 80%;
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
+.section{
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
+.section.section-narrow{
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .row-space-1{
@@ -60,6 +71,100 @@
 }
 
 .h3-title{
+	width: 585px;
 	position: relative;
 	left: 25px;
+}
+
+.display-3{
+	position: relative;
+	text-align: center;
+}
+
+.text-white{
+    color: rgb(255, 255, 255);
+}
+
+.text-center{
+    text-align: center;
+}
+
+#custom-search-input {
+        margin:0;
+        margin-top: 10px;
+        padding: 0;
+    }
+ 
+    #custom-search-input .search-query {
+        padding-right: 3px;
+        padding-right: 4px \9;
+        padding-left: 3px;
+        padding-left: 4px \9;
+        /* IE7-8 doesn't have border-radius, so don't indent the padding */
+ 
+        margin-bottom: 0;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+    }
+ 
+    #custom-search-input button {
+        border: 0;
+        background: none;
+        /** belows styles are working good */
+        padding: 2px 5px;
+        margin-top: 2px;
+        position: relative;
+        left: -28px;
+        /* IE7-8 doesn't have border-radius, so don't indent the padding */
+        margin-bottom: 0;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        color:#D9230F;
+    }
+ 
+    .search-query:focus + button {
+        z-index: 3;   
+    }
+
+    /* The navigation bar */
+#navbar-main {
+    overflow: hidden;
+    background-color: #333;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+}
+
+/* Links inside the navbar */
+.navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Main content */
+.main {
+    margin-top: 30px; /* Add a top margin to avoid content overlay */
+}
+    
+.footer {
+      overflow: hidden;
+      background-color: #333;
+      width: 100%;
+      height: 200px;
+    }
+
+.footer-icon {
+    overflow:hidden;
+    width: 30px;
+    height: 30px;
+}
+
+.footer-link {
+    margin-top: 30px
 }
