--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,23 @@
 
-<header class="jumbotron my-4">
+<header >
 	<div class="row">
 		<div class="col-sm-4"> <h1 class="display-3">SmartGamer</h1></div>
        
         
-        <input type="text" name="search" placeholder="Find..">
+        <div id="custom-search-input">
+                            <div class="input-group col-md-6">
+                                <input type="text" class="  search-query form-control" placeholder="Search" />
+                                <span class="input-group-btn">
+                                    <button class="btn btn-danger" type="button">
+                                        <span class=" glyphicon glyphicon-search"></span>
+                                    </button>
+                                </span>
+                            </div>
+                        </div>
     </div>
-    <p class="lead">Play Smart not Hard</p>
 </header>
 
-<div class="container">
+<div class="container-quote">
 	<blockquote class="blockquote col-sm-offset-3 col-sm-6">
 		<p><%= @quote["quoteText"] %></p>
 		<% quote_author = @quote["quoteAuthor"] %>
@@ -33,8 +41,8 @@
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
 		</div>
-		<div class="col-sm-2">
-			
+		<div class="col-sm-4">
+			<h3 class="h3-title">Activity</h3>
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
@@ -58,13 +66,39 @@
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
 		
 		</div>
-		<div class="col-sm-3">
+		<div class="col-sm-2">
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
 		</div>
-		<div class="col-sm-2">
+		<div class="col-sm-4">
+		<h3 class="h3-title">People</h3>
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
+		</div>
+			<div class="col-sm-2">
 			
+		</div>
+	</div>
+	<div class="row">
+		<h3 class="h3-title">Meetups</h3>
+		<div class="col-md-6">
+			<img src='/assets/placeholder.jpg' alt="Main article image" class="article-image-main">
+			
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
+			
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
+		
+		</div>
+		<div class="col-sm-2">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
+			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
+		</div>
+		<div class="col-sm-4">
+			<h3 class="h3-title">Meet your friends</h3>
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
@@ -76,4 +110,6 @@
 			
 		
 	</div>
+
+	
 </div>
