add user_id and follower column to followers table add button to view page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,9 @@
 </div>
 <div id="body">
   <div id="left">
-    <div id="button" class="border"></div>
+    <div id="button" class="border">
+      <%= button_to "Follow", followers_path %>
+    </div>
     <div id="content" class="border"></div>
   </div>
   <div id="right">
