--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,18 +1,20 @@
 <% @articles.each do |article| %>
 
-	<div class="">	
-		<% if article.url %>
-			<div><%= article.url %></div>
-			<div><%= image_tag(article.image, height: '200') %></div>
-		<% end %>
+	<%= link_to article_path(article), target: "_self" do %>
+		<div class="">	
+			<% if article.url %>
+				<div><%= article.url %></div>
+				<div><%= image_tag(article.image, height: '200') %></div>
+			<% end %>
 
-		<div><%= article.title %></div>
+			<div><%= article.title %></div>
 
-		<div><%= article.content %></div>
-	</div>
+			<div><%= article.content %></div>
+		</div>
+	<% end %>
 
 	<% unless article.url %>
-		<%#= link_to 'Edit Article', edit_article_path %>
+		<%= link_to 'Edit Article', edit_article_path(article) %>
 	<% end %>
 
 	<%= link_to 'Delete Article', article_path(article), method: :delete, data: { confirm: 'Are you sure?' } %>
