--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -11,7 +11,15 @@
 	<div class="panel panel-default">
 		<div class="panel-heading">Create article</div>
 		<div class="panel-body">
-			<%= render partial: '/articles/form' %>
+			<%= form_for @article, html: { class: 'form-horizontal' } do |form| %>
+				<%= render partial: '/articles/form', object: form %>
+
+				<!-- Submit button to create article -->
+			  <div class="form-group text-center">
+			      <%= form.submit 'Create article', class: 'btn btn-default' %>
+			  </div>
+
+			<% end %>
 		</div>
 	</div>
 </div>
