add Followers controller and resources for create and destroy

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,13 @@
 <div id="body">
   <div id="left">
     <div id="button" class="border">
-      <%= button_to "Follow", followers_path %>
+      <% if params[:id].to_i != current_user.id  %>
+        <%= form_for :follower, url: followers_path, method: :post do |f| %>
+          <%= f.hidden_field :user_id, value: params[:id] %>
+          <%= f.hidden_field :follower, value: current_user.id %>
+          <%= f.submit "Follow"  %>
+        <% end %>
+      <% end %>
     </div>
     <div id="content" class="border"></div>
   </div>
