--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
       <% if params[:id].to_i != current_user.id  %>
         <%= form_for :follower, url: followers_path, method: :post do |f| %>
           <%= f.hidden_field :user_id, value: params[:id] %>
-          <%= f.hidden_field :follower, value: current_user.id %>
+          <%= f.hidden_field :follower_id, value: current_user.id %>
           <%= f.submit "Follow"  %>
         <% end %>
       <% end %>
