--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,17 +3,18 @@
 	<div class="row">
 		<div class="col-sm-4"> <h1 class="display-3">SmartGamer</h1></div>
        
-        
-        <div id="custom-search-input">
-                            <div class="input-group col-md-6">
-                                <input type="text" class="  search-query form-control" placeholder="Search" />
-                                <span class="input-group-btn">
-                                    <button class="btn btn-danger" type="button">
-                                        <span class=" glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
-                            </div>
-                        </div>
+			<!-- Searchbar -->
+      <div id="custom-search-input">
+        <div class="input-group col-md-6">
+          <input type="text" class="  search-query form-control" placeholder="Search" />
+          <span class="input-group-btn">
+            <button class="btn btn-danger" type="button">
+                <span class=" glyphicon glyphicon-search"></span>
+            </button>
+          </span>
+        </div>
+      </div>
+
     </div>
 </header>
 
