--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,12 +6,25 @@
 			<!-- Searchbar -->
       <div id="custom-search-input">
         <div class="input-group col-md-6">
-          <input type="text" class="  search-query form-control" placeholder="Search" />
+					
+					<%= form_tag root_path, method: 'get' do %>
+						<div class="input-group">
+							<!-- FIXME - change message from "Please fill out this field." -->
+							<%= text_field_tag :search, params[:search], placeholder: 'Search', required: true, class: 'form-control' %>
+							<!-- FIXME - Change Go! to search icon -->
+							<span class="input-group-btn"><%= submit_tag "Go!", name: nil, class: 'btn btn-default' %></span>
+						</div>
+					<% end %>
+
+
+<!--           <input type="text" class="  search-query form-control" placeholder="Search" />
           <span class="input-group-btn">
             <button class="btn btn-danger" type="button">
                 <span class=" glyphicon glyphicon-search"></span>
             </button>
-          </span>
+          </span> -->
+
+
         </div>
       </div>
 
