--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,19 @@
 <div id="header" class="border">
-  <h1>Hello <%= @user.email %></h1>
+  <div class="row">
+    <div class="col-lg-3">
+      <img src="/assets/placeholder.jpg" alt="Avatar" class="article-image-second-long">
+    
+  </div>
+  </div>
+  
 </div>
 <div id="body">
   <div id="left">
-    <div id="button" class="border"></div>
+    <div id="button" class="button-group-lg"></div>
+        <button type="button" class="btn btn-primary">Overall</button>
+        <button type="button" class="btn btn-primary">Stats</button>
+        <button type="button" class="btn btn-primary">History</button>
+        <button type="button" class="btn btn-primary">Overall</button>
     <div id="content" class="border"></div>
   </div>
   <div id="right">
