--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -153,6 +153,7 @@
 }
     
 .footer {
+      position: absolute;
       overflow: hidden;
       background-color: #333;
       width: 100%;
@@ -166,5 +167,9 @@
 }
 
 .footer-link {
-    margin-top: 30px
+    margin-top: 30px;
+}
+
+#test {
+    color: blue;
 }
