--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,8 +8,8 @@
                             <div class="input-group col-md-6">
                                 <input type="text" class="  search-query form-control" placeholder="Search" />
                                 <span class="input-group-btn">
-                                    <button class="btn btn-danger" type="button">
-                                        <span class=" glyphicon glyphicon-search"></span>
+                                    <button class="btn btn-danger" id="test" type="button">
+                                        <span class="glyphicon glyphicon-search"></span>
                                     </button>
                                 </span>
                             </div>
