--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -22,6 +22,9 @@
 	<% end %>
 
 	<% unless article.url %>
+
+	<%= link_to 'Reply This Article', new_article_comment_path(article) %>
+
 		<%= link_to 'Edit Article', edit_article_path(article) %>
 	<% end %>
 
