--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,25 +2,25 @@
   <div class="row">
     <div class="col-lg-3">
       <img src="/assets/placeholder.jpg" alt="Avatar" class="article-image-second-long">
-    
+
   </div>
   </div>
-  
+
 </div>
 <div id="body">
   <div id="left">
     <div id="button" class="border">
       <% if User.check_follower(params[:id], current_user.id) && params[:id].to_i != current_user.id %>
-        <%= form_for :follower, url: followers_path, method: :post do |f| %>
+        <%= form_for :follower, url: followers_path, method: :post, :html => {:class => "inline"} do |f| %>
           <%= f.hidden_field :user_id, value: params[:id] %>
           <%= f.hidden_field :follower_id, value: current_user.id %>
-          <%= f.submit "Follow"  %>
+          <%= f.button "Follow", class: "btn btn-primary"  %>
         <% end %>
       <% elsif params[:id].to_i != current_user.id %>
-        <%= form_for :follower, url: followers_path, method: :post do |f| %>
+        <%= form_for :follower, url: followers_path, method: :post, :html => {:class => "inline"} do |f| %>
           <%= f.hidden_field :user_id, value: params[:id] %>
           <%= f.hidden_field :follower_id, value: current_user.id %>
-          <%= f.submit "Unfollow"  %>
+          <%= f.button "Unfollow", class: "btn btn-primary" %>
         <% end %>
       <% end %>
       <button type="button" class="btn btn-primary">Overall</button>
