--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,13 +2,13 @@
 <header >
 	<div class="row">
 		<div class="col-sm-4"> <h1 class="display-3">SmartGamer</h1></div>
-       
+
 
 			<!-- Searchbar -->
       <div id="custom-search-input">
         <div class="input-group col-md-6">
-					
-					<%= form_tag root_path, method: 'get' do %>
+
+					<%= form_tag search_path, method: 'get' do %>
 						<div class="input-group">
 							<!-- FIXME - change message from "Please fill out this field." -->
 							<%= text_field_tag :search, params[:search], placeholder: 'Search', required: true, class: 'form-control' %>
@@ -46,11 +46,11 @@
 		<h3 class="h3-title">Articles</h3>
 		<div class="col-md-6">
 			<img src='/assets/placeholder.jpg' alt="Main article image" class="article-image-main">
-			
+
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
-			
+
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
-		
+
 		</div>
 		<div class="col-sm-2">
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
@@ -65,10 +65,10 @@
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
 		</div>
 		<div class="col-sm-2">
-			
+
 		</div>
-			
-		
+
+
 	</div>
 	<div class="row">
 		<div class="col-sm-2-1">
@@ -76,11 +76,11 @@
 		</div>
 		<div class="col-md-6">
 			<img src='/assets/placeholder.jpg' alt="Main article image" class="article-image-main">
-			
+
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
-			
+
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
-		
+
 		</div>
 		<div class="col-sm-2">
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
@@ -95,18 +95,18 @@
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
 		</div>
 			<div class="col-sm-2">
-			
+
 		</div>
 	</div>
 	<div class="row">
 		<h3 class="h3-title">Meetups</h3>
 		<div class="col-md-6">
 			<img src='/assets/placeholder.jpg' alt="Main article image" class="article-image-main">
-			
+
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
-			
+
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
-		
+
 		</div>
 		<div class="col-sm-2">
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second">
@@ -121,11 +121,11 @@
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="activity-pic">
 		</div>
 		<div class="col-sm-2">
-			
+
 		</div>
-			
-		
+
+
 	</div>
 
-	
+
 </div>
