Add styling to article index page

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -9,4 +9,15 @@
 	margin: 8px;
 	padding: 16px 18px 16px 18px;
 	width: 80%;
+	.article-title {
+		font-size: 1.8em;
+		font-weight: 700;
+		color: #000;
+	}
+	.article-content {
+		color: #000;
+	}
+	.article-social {
+		margin: 8px 0 8px 0;
+	}
 }
