--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,24 +4,25 @@
 		
 		<%= link_to article_path(article), target: "_self" do %>
 			<div class="article">	
+				<div class="article-title"><%= article.title %></div>
+
 				<% if article.url %>
-					<div><%= article.url %></div>
-					<div><%= image_tag(article.image, height: '200') %></div>
+					<div class="article-image"><%= image_tag(article.image, height: '200') %></div>
 				<% end %>
 
-				<div><%= article.title %></div>
-
-				<div><%= article.content %></div>
+				<div class="article-content"><%= article.content %></div>
 			</div>
 		<% end %>
 		
-		<%= link_to "https://www.facebook.com/dialog/share?app_id=145634995501895&display=popup&href=#{article.url}&redirect_uri=https%3A%2F%2Fdevelopers.facebook.com%2Ftools%2Fexplorer", target: "_blank", class: "btn btn-social-icon btn-facebook" do %>
-	    <span class="fa fa-facebook"></span>
-		<% end %>
+		<div class="article-social">
+			<%= link_to "https://www.facebook.com/dialog/share?app_id=145634995501895&display=popup&href=#{article.url}&redirect_uri=https%3A%2F%2Fdevelopers.facebook.com%2Ftools%2Fexplorer", target: "_blank", class: "btn btn-social-icon btn-facebook" do %>
+		    <span class="fa fa-facebook"></span>
+			<% end %>
 
-		<%= link_to "http://twitter.com/home?status=#{article.title} #{article.url}", target: "_blank", class: "btn btn-social-icon btn-twitter" do %>
-			<span class="fa fa-twitter"></span>
-		<% end %>
+			<%= link_to "http://twitter.com/home?status=#{article.title} #{article.url}", target: "_blank", class: "btn btn-social-icon btn-twitter" do %>
+				<span class="fa fa-twitter"></span>
+			<% end %>
+		</div>
 
 		<% unless article.url %>
 			<%= link_to 'Edit Article', edit_article_path(article) %>
