--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -2,6 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+// articles#index
+
+
 .article-wrapper {
 	border: 1px solid #efefef;
 	background-color: #fff;
@@ -18,6 +21,14 @@
 		color: #000;
 	}
 	.article-social {
+		margin: 8px 0 8px 0;
+	}
+}
+
+// articles#show
+.article {
+	color: #000;
+	.article-image{
 		margin: 8px 0 8px 0;
 	}
 }
