--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,14 @@
+<div class="article">	
 
-<% if @article.url %>
-	<div><%= @article.url %></div>
-	<div><%= image_tag(@article.image, height: '200') %></div>
-<% end %>
+	<div class="article-title h1"><%= @article.title %></div>
+	
+	<% if @article.url %>
+		<div class="article-image"><%= image_tag(@article.image, width: '500') %></div>
+	<% end %>
+	
+	<%= link_to @article.url, target: "_blank", class: 'btn btn-default' do %>
+		View article from original source
+	<% end %>
 
-<div><%= @article.title %></div>
-
-<div><%= @article.content %></div>
-
+	<div class="article-content"><%= @article.content %></div>
+</div>
