--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,6 +9,15 @@
 		<% end %>
 	<% end %>
 	
+	<div class="article-social">
+		<%= link_to "https://www.facebook.com/dialog/share?app_id=145634995501895&display=popup&href=#{@article.url}&redirect_uri=https%3A%2F%2Fdevelopers.facebook.com%2Ftools%2Fexplorer", target: "_blank", class: "btn btn-social-icon btn-facebook" do %>
+	    <span class="fa fa-facebook"></span>
+		<% end %>
+
+		<%= link_to "http://twitter.com/home?status=#{@article.title} #{@article.url}", target: "_blank", class: "btn btn-social-icon btn-twitter" do %>
+			<span class="fa fa-twitter"></span>
+		<% end %>
+	</div>
 
 	<div class="article-content"><%= @article.content %></div>
 </div>
