--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,5 +19,5 @@
 		<% end %>
 	</div>
 
-	<div class="article-content"><%= @article.content %></div>
+	<div class="article-content"><%= simple_format(@article.content) %></div>
 </div>
