--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -20,6 +20,7 @@
 	.article-content {
 		color: #000;
 		text-align: justify;
+		white-space: pre-wrap;
 	}
 	.article-social {
 		margin: 8px 0 8px 0;
