--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,8 +10,8 @@
 					<div class="article-image"><%= image_tag(article.image, height: '200') %></div>
 				<% end %>
 			<% end %>
-			
-			<div class="article-content"><%= simple_format(article.content) %></div>
+
+			<div class="article-content minimize"><%= simple_format(article.content) %></div>
 		</div>
 		
 		<div class="article-social">
