--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -1,8 +1,3 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-
 .container{
     padding-top: 75px;
     padding-bottom: 75px;
@@ -67,7 +62,7 @@
 	width: 275px;
 	height: 195px;
 	padding: 5px;
-	position: relative;	
+	position: relative;
 }
 
 .h3-title{
@@ -94,20 +89,20 @@
         margin-top: 10px;
         padding: 0;
     }
- 
+
     #custom-search-input .search-query {
         padding-right: 3px;
         padding-right: 4px \9;
         padding-left: 3px;
         padding-left: 4px \9;
         /* IE7-8 doesn't have border-radius, so don't indent the padding */
- 
+
         margin-bottom: 0;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
         border-radius: 3px;
     }
- 
+
     #custom-search-input button {
         border: 0;
         background: none;
@@ -123,9 +118,9 @@
         border-radius: 3px;
         color:#D9230F;
     }
- 
+
     .search-query:focus + button {
-        z-index: 3;   
+        z-index: 3;
     }
 
     /* The navigation bar */
@@ -151,7 +146,7 @@
 .main {
     margin-top: 30px; /* Add a top margin to avoid content overlay */
 }
-    
+
 .footer {
       position: absolute;
       overflow: hidden;
@@ -172,4 +167,25 @@
 
 #test {
     color: blue;
+}
+
+
+/* Search page content */
+#search_result{
+    margin-top: -40px;
+    padding: 0;
+}
+
+.btn-primary {
+    width:100px;
+}
+
+#search_result_content {
+    width:60%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#search_result_content div {
+    margin: 20px 0;
 }
