--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -1,27 +1,27 @@
 <div id="search_result">
   <div id="search_result_nav">
     <% if !@users.empty? && !@articles.empty? %>
-      <button class="btn btn-primary active">All</button>
+      <button class="search_btn btn btn-primary active">All</button>
     <% end %>
     <% if !@users.empty? %>
-      <button class="btn btn-primary">Gamers</button>
+      <button class="search_btn btn btn-primary">Gamers</button>
     <% end %>
     <% if !@articles.empty? %>
-      <button class="btn btn-primary">Articles</button>
+      <button class="search_btn btn btn-primary">Articles</button>
     <% end %>
-    <%= link_to "New search", root_path, class: "btn btn-primary" %>
+    <%= link_to "New search", root_path, class: "search_btn btn btn-primary" %>
   </div>
 
   <div id="search_result_content">
     <% if !@users.empty? %>
-      <div class="border">
+      <div id="users_search_result" class="border">
         <% @users.each do |user| %>
           <%= user.nickname %>
         <% end %>
       </div>
     <% end %>
     <% if !@articles.empty? %>
-      <div class="border">
+      <div id="articles_search_result" class="border">
         <% @articles.each do |article| %>
           <%= article.title %>
           <%= article.content %>
