--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,6 +9,14 @@
 		<% end %>
 	<% end %>
 	
+	<% if signed_in? && current_user.admin? %>
+    <% unless @article.url %>
+      <%= link_to 'Edit Article', edit_article_path(@article) %>
+    <% end %>
+
+		<%= link_to 'Delete Article', article_path(@article), method: :delete, data: { confirm: 'Are you sure?' } %>
+	<% end %>
+
 	<div class="article-social">
 		<%= link_to "https://www.facebook.com/dialog/share?app_id=145634995501895&display=popup&href=#{@article.url}&redirect_uri=https%3A%2F%2Fdevelopers.facebook.com%2Ftools%2Fexplorer", target: "_blank", class: "btn btn-social-icon btn-facebook" do %>
 	    <span class="fa fa-facebook"></span>
@@ -22,10 +30,16 @@
 	<div class="article-content"><%= simple_format(@article.content) %></div>
 </div>
 
+<% if signed_in? %>
+	<%= link_to 'Reply This Article', new_article_comment_path(@article) %>
+<% end %>
+
 <% @article.comments.each do |comment| %>
 	<p><%= comment.reply_article %>
-		<%= link_to 'Edit Comment', edit_article_comment_path(@article, comment) if comment.user_id == current_user.id %>
-		<%= link_to 'Delete Comment', article_comment_path(@article, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
+		<% if comment.user_id == current_user.id %>
+			<%= link_to 'Edit Comment', edit_article_comment_path(@article, comment) %>
+			<%= link_to 'Delete Comment', article_comment_path(@article, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
+		<% end %>
 	</p>
 <% end %>
 
