--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -85,9 +85,9 @@
 }
 
 #custom-search-input {
-        margin:0;
-        margin-top: 10px;
-        padding: 0;
+        margin-top:7px;
+        display: inline-block;
+        width:250px;
     }
 
     #custom-search-input .search-query {
