--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,36 +1,10 @@
 
 <header >
 	<div class="row">
-		<div class="col-sm-4"> <h1 class="display-3">SmartGamer</h1></div>
-
-
-			<!-- Searchbar -->
-      <div id="custom-search-input">
-        <div class="input-group col-md-6">
-
-					<%= form_tag search_path, method: 'get' do %>
-						<div class="input-group">
-							<!-- FIXME - change message from "Please fill out this field." -->
-							<%= text_field_tag :search, params[:search], placeholder: 'Search', required: true, class: 'form-control' %>
-							<!-- FIXME - Change Go! to search icon -->
-							<span class="input-group-btn"><%= submit_tag "Go!", name: nil, class: 'btn btn-default' %></span>
-						</div>
-					<% end %>
-
-
-<!--           <input type="text" class="  search-query form-control" placeholder="Search" />
-          <span class="input-group-btn">
-            <button class="btn btn-danger" type="button">
-                <span class=" glyphicon glyphicon-search"></span>
-            </button>
-          </span> -->
-
-
-        </div>
-      </div>
-
-
-    </div>
+		<div class="col-sm-4">
+			<h1 class="display-3">SmartGamer</h1>
+		</div>
+	</div>
 </header>
 
 <div class="container-quote">
