--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,8 +10,18 @@
 			</button>
 			<%= link_to "SmartGamer", root_path, class: "navbar-brand" %>
 
+      <!-- Searchbar -->
+      <div id="custom-search-input">
+        <%= form_tag search_path, method: 'get' do %>
+          <div class="input-group">
+            <!-- FIXME - change message from "Please fill out this field." -->
+            <%= text_field_tag :search, params[:search], placeholder: 'Search', required: true, class: 'form-control' %>
+            <!-- FIXME - Change Go! to search icon -->
+            <span class="input-group-btn"><%= submit_tag "Go!", name: nil, class: 'btn btn-default' %></span>
+          </div>
+        <% end %>
+      </div>
 
-		
       <% if signed_in?  %>
         <ul class="nav navbar-nav pull-right">
           <li><%= link_to 'Log Out', logout_path, method: :delete %></li>
@@ -21,9 +31,9 @@
           <li><%= link_to 'Log In via Steam', '/auth/steam' %></li>
         </ul>
       <% end %>
-       <% flash.each do |key, value| %>
-  	<%= content_tag :div, value, :id => key %>
-  <% end %>
+      <% flash.each do |key, value| %>
+      	<%= content_tag :div, value, :id => key %>
+      <% end %>
       <%= link_to "Create Articles", articles_path, class: "navbar-brand" if current_user && current_user.admin? %>
 		</div>
 
