--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -14,17 +14,20 @@
 
   <div id="search_result_content">
     <% if !@users.empty? %>
-      <div id="users_search_result" class="border">
+      <div id="users_search_result">
         <% @users.each do |user| %>
-          <%= user.nickname %>
+          <div id="user_search_result" class="border">
+            <p>Nikname: <%= link_to user.nickname, :controller => :users, :action => :show, :id => user.id %></p>
+          </div>
         <% end %>
       </div>
     <% end %>
     <% if !@articles.empty? %>
-      <div id="articles_search_result" class="border">
+      <div id="articles_search_result" >
         <% @articles.each do |article| %>
-          <%= article.title %>
-          <%= article.content %>
+          <div id="article_search_result" class="border">
+            <p>Title: <%= link_to article.title, article_path(article) %></p>
+          </div>
         <% end %>
       </div>
     <% end %>
