--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -85,6 +85,12 @@
     color: rgb(255, 255, 255);
 }
 
+#logo-font {
+    font-family: 'Monofett', cursive;
+    color: rgb(255, 255, 255);
+    font-size: 50px;
+}
+
 .text-center{
     text-align: center;
 }
@@ -155,7 +161,7 @@
 .footer {
       position: absolute;
       overflow: hidden;
-      background-color: #333;
+      background-color: #2B55B2;
       width: 100%;
       height: 200px;
     }
