Display first article of home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,9 +46,16 @@
 		<h3 class="h3-title">Articles</h3>
 		<div class="col-sm-6">
 			
+			<% first_article = @articles.first %>
+			<%= link_to article_path(first_article), target: "_self" do %>
+				<% if first_article.image %>
+					<%= image_tag first_article.image, class: "article-image-main" %>
+				<% else %>
+					<%#= image_tag '/assets/placeholder.jpg', class: "article-image-main" %>
+					<div style='background-image: url(/assets/placeholder.jpg); background-size: contain;' class="text-center article-image-main"><%= first_article.title %></div>
+				<% end %>
+			<% end %>
 
-			<img src='/assets/placeholder.jpg' alt="Main article image" class="article-image-main">
-			
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
 			
 			<img src='/assets/placeholder.jpg' alt="secondary article image"  class="article-image-second-long">
