--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -85,7 +85,7 @@ $background-dark: #403F48;
 .progress-bar {
   text-align: left;
   transition-duration: 3s;
-
+}
 .inline {
   display: inline-block;
 
