--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,7 @@
 					<% first_article = @articles_home.first %>
 					<%= link_to article_path(first_article), target: "_self" do %>
 						<% if first_article.image %>
-							<%= image_tag first_article.image, class: "article-image-main" %>
+							<%= image_tag first_article.image, title: article.title, class: "article-image-main" %>
 						<% else %>
 							<%#= image_tag '/assets/placeholder.jpg', class: "article-image-main" %>
 							<div class="text-center article-text-main"><span><%= first_article.title %></span></div>
@@ -44,7 +44,7 @@
 					<% second_articles.each do |article| %>
 						<%= link_to article_path(article), target: "_self" do %>
 							<% if article.image %>
-								<%= image_tag article.image, class: "article-image-second-long" %>
+								<%= image_tag article.image, title: article.title, class: "article-image-second-long" %>
 							<% else %>
 								<div class="text-center article-text-second-long"><span><%= article.title %></span></div>
 							<% end %>
@@ -57,7 +57,7 @@
 					<% second_articles.each do |article| %>
 						<%= link_to article_path(article), target: "_self" do %>
 							<% if article.image %>
-								<%= image_tag article.image, class: "article-image-second" %>
+								<%= image_tag article.image, title: article.title, class: "article-image-second" %>
 							<% else %>
 								<div class="text-center article-text-second"><span><%= article.title %></span></div>
 							<% end %>
