--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -232,6 +232,7 @@
 
 /* Search page content */
 #search_result{
+    min-height: calc(65vh - 70px);
     margin-top: -40px;
     padding: 0;
 }
@@ -242,10 +243,20 @@
 
 #search_result_content {
     width:60%;
-    text-align: center;
-    margin: 0 auto;
+    text-align: left;
+    margin: 80px auto;
 }
 
 #search_result_content div {
-    margin: 20px 0;
+    margin: 30px 0;
+}
+
+#navbar-avatar {
+    height: 50px;
+    width: 50px;
+    padding-top: 0px;
+}
+
+#navbar-drop {
+    padding: 0px;
 }
