--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -249,3 +249,11 @@
 #search_result_content div {
     margin: 20px 0;
 }
+
+.home-user-table {
+  width: 100%;
+  th, td {
+    border: 1px solid #fff;
+    padding: 8px;
+  }
+}
