sortable user table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,9 @@
 @import 'bootstrap.min.css';
 @import 'bootstrap-theme.css';
 @import 'bootstrap-theme.min.css';
+@import 'bootstrap-table';
 @import 'articles';
+
 
 
 $white-font: #FFF;
