Display quote with margin top

--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -3,6 +3,12 @@
     padding-bottom: 75px;
 }
 
+.container-quote{
+    width: 50%;
+    margin: 75px auto 0 auto;
+    overflow: hidden;
+}
+
 .section{
     padding-top: 75px;
     padding-bottom: 75px;
