Display achieved achievement followed by the rest

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -106,18 +106,19 @@
     </div>
     <div id="my_achievements" class="border background-color-div">
       <h3>Achievements</h3>
-      <div class="text-left">      
-        <% @badges.each do |badge| %>
-          <div class="<%= 'achieved' if @user.achievements.find_by(badge_id: badge.id).status %> achievement-item">
+      <div class="text-left">
+        <% achievements = @user.achievements.order(status: :desc) %>      
+        <% achievements.each do |achievement| %>
+          <div class="<%= 'achieved' if achievement.status %> achievement-item">
             <span class="achievement-image pull-left">
-              <%= image_tag(badge.image, width: '50', height: '50') %>
+              <%= image_tag(achievement.badge.image, width: '50', height: '50') %>
             </span>
             <span class="achievement-title">
-              <%= badge.name %>
+              <%= achievement.badge.name %>
             </span>
             <br>
             <span class="achievement-description">
-              <%= badge.description %>
+              <%= achievement.badge.description %>
             </span>
           </div>
         <% end %>
