--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,7 @@
             <!-- FIXME - change message from "Please fill out this field." -->
             <%= text_field_tag :search, params[:search], placeholder: 'Search', required: true, class: 'form-control' %>
             <!-- FIXME - Change Go! to search icon -->
-            <span class="input-group-btn"><%= submit_tag "Go!", name: nil, class: 'btn btn-default' %></span>
+            <span class="input-group-btn"><%= image_submit_tag("search", class: 'btn btn-default search') %></span>
           </div>
         <% end %>
       </div>
@@ -30,13 +30,13 @@
       <% end %>
       <%= link_to "Create Articles", articles_path, class: "navbar-brand" if current_user && current_user.admin? %>
 		</div>
-			
+
 		<div class="collapse navbar-collapse" id="navbar">
 			<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown">
 						<% if signed_in? && current_user.nickname != nil %>
 						<%= link_to current_user.nickname, current_user, role: "button"%>
-						
+
 						<% end %>
 
 					</li>
