redesigned User page

--- a/app/assets/stylesheets/new_age/new_age.css.scss
+++ b/app/assets/stylesheets/new_age/new_age.css.scss
@@ -421,9 +421,9 @@ footer ul li a.active {
   text-decoration: none;
 } 
 .bg-primary {
-  background: #fdcc52;
+  background: #A7C8FF;
   background: -webkit-linear-gradient(#fdcc52, #fdc539);
-  background: linear-gradient(#fdcc52, #fdc539);
+  background: linear-gradient(#00b5ad, #00b5ad);
 }
 .text-primary {
   color: #fdcc52;
