--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -16,7 +16,7 @@
 }
 
 #left{
-  width:65%;
+  width:80%;
   margin: 30px auto;
 }
 
@@ -31,7 +31,10 @@ $background-dark: #403F48;
   background-color: $background-dark;
 }
 
-
+.border {
+  border: 2px solid #00b5ad;
+  border-radius: 5px;
+}
 
 #header {
 
