--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -80,7 +80,14 @@
 		<!-- Users table -->
 		<div class="col-sm-6">
 			<div class="row">
-				<div class="col-sm-9"><h3 class="h3-title">Top 5 Gamer (by today playtime)</h3></div>
+
+				<div class="col-sm-9"><h3 class="h3-title">Top 5 Gamers (by today playtime)</h3></div>
+				<div class="col-sm-3">
+					<%= link_to articles_path, class: 'btn btn-default align-bottom' do %>
+						View all articles
+					<% end %>
+				</div>
+
 				<div class="col-sm-3">
 				</div>
 			</div>
