--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,3 +1,4 @@
+<%= form_for @user do |form| %>
 <%= form.label :name %>
 <%= form.text_field :name %>
 
@@ -17,3 +18,7 @@
 <%= form.label :privacy %>
 <%= form.select :privacy, User.privacies.keys.to_a %>
 
+ 
+  <%= form.submit %>
+
+<% end %>
