able to like commendation

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -135,4 +135,7 @@
       <%= commendation.name %>
       <%= commendation.count %>
     </div>
+    
+    <%= link_to '<i class="fa fa-plus-square-o"></i>'.html_safe, user_commendation_path(commendation.user_id, commendation.id), :method => :put  %>
   <% end %>
+
