--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -141,6 +141,7 @@
 }
 
 #logo-font {
+    margin:3px 10px 0 0;
     font-family: 'Monofett', cursive;
     color: rgb(255, 255, 255);
     font-size: 50px;
@@ -151,7 +152,7 @@
 }
 
 #custom-search-input {
-        margin-top:7px;
+        margin-top:13px;
         display: inline-block;
         width:250px;
     }
@@ -284,4 +285,9 @@
 
 .search {
     width:49px;
+}
+
+.steam_log_in {
+    margin-right:30px   ;
+    width:50px;
 }
